Added people over places section, added some responsiveness to the header

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   <h2 class="util-animate-up">Welcome to People Over Places Tourism</h2>
                   <p class="util-animate-up">At People Over Places Tourism, we believe that the true essence of travel lies not just in the destinations, but in the connections we make along the way. Our motto, "People Over Places," reflects our commitment to creating unforgettable experiences through meaningful interactions with local communities and cultures.
                 
-                Join us on a journey where every moment is enriched by the stories, traditions, and warmth of the people you meet. Whether you’re exploring bustling cities or tranquil villages, our curated tours ensure that you discover the heart and soul of each place through its most valuable asset – its people.
+                <br>Join us on a journey where every moment is enriched by the stories, traditions, and warmth of the people you meet. Whether you’re exploring bustling cities or tranquil villages, our curated tours ensure that you discover the heart and soul of each place through its most valuable asset – its people.
                 
                 Let's travel beyond the ordinary. Welcome to a new way of seeing the world, one smile at a time.</p>
                  </div> 
