Added animation to the navigation bar and hero page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <nav class="header-nav">
+            <nav class="header-nav reveal-on-spot">
                 <!-- <ul class="header-nav-links"> -->
                     <!-- <img src="images/logo/logo_main.png" alt="logo ravangla star" class="header-nav-logo"> -->
                     <a class="header-nav-link" href="#head" >HOME</a>
@@ -30,7 +30,7 @@
 
                 <!-- </ul> -->
             </nav>
-            <div class="header-heading">
+            <div class="header-heading reveal-up">
                 <img src="images/logo/logo_main.png" alt="logo ravangla star" class="header-nav-logo">
                 <div class="header-heading-services">
                     <div class="header-heading-services-container">
